cloud-connect/booking-api-gateway/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-api-gateway
  namespace: cloud-connect
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 32k;
      large_client_header_buffers 4 128k;
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set    $auth_cookie1 $upstream_http_x_header1;
      auth_request_set    $auth_cookie2 $upstream_http_x_header2;
      add_header          Set-Cookie $auth_cookie1;
      add_header          Set-Cookie $auth_cookie2;
